--- a/model/room_config.json
+++ b/model/room_config.json
@@ -2,14 +2,14 @@
     "model" : {
         "min_input_size":       288,
         "max_input_size":       448,
-        "anchors":            [4,4, 5,8, 6,11, 6,6, 6,15, 7,11, 8,14, 10,8, 15,11],
-        "labels":             ["door"]
+        "anchors":            [12,19, 16,33, 17,64, 25,22, 26,50, 35,35, 35,93, 73,52, 93,119],
+        "labels":             ["room"]
     },
 
     "train": {
         "train_image_folder":   "C:\\Users\\wangy\\Desktop\\UniMelb\\1\\Group7\\room\\images\\",
-        "train_annot_folder":   "C:\\Users\\wangy\\Desktop\\UniMelb\\1\\Group7\\room\\annots\\door\\",
-        "cache_name":        "door_train.pkl",
+        "train_annot_folder":   "C:\\Users\\wangy\\Desktop\\UniMelb\\1\\Group7\\room\\annots\\room\\",
+        "cache_name":        "room_train.pkl",
 
         "train_times":          8,
         "batch_size":           16,
@@ -26,7 +26,7 @@
         "class_scale":          1,
 
         "tensorboard_dir":      "logs",
-        "saved_weights_name":   "",
+        "saved_weights_name":   "room_model.h5",
         "debug":                true
     },
 
