--- a/model/text_config.json
+++ b/model/text_config.json
@@ -26,7 +26,7 @@
         "class_scale":          1,
 
         "tensorboard_dir":      "logs",
-        "saved_weights_name":   "backend.h5",
+        "saved_weights_name":   "",
         "debug":                true
     },
 
